Started on oauth guts. Got access code parsing done.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,29 +1,63 @@
-cmake_minimum_required(VERSION 3.9.0)
+cmake_minimum_required(VERSION 3.2.0)
 
-project(Optional)
+project(Optional C CXX)
 set(target_name "optional")
+
+
+#################
+#### Source Files
+
+set(
+    headers
+
+    src/oauth.h
+    src/account.h
+    src/display.h
+)
+
+set(
+    sources
+
+    src/main.cpp
+    src/oauth.cpp
+    src/account.cpp
+    src/display.cpp
+)
+
+
+#######################
+#### Required Libraries
+
+find_package(Curses REQUIRED)
+if (Curses_FOUND)
+    include_directories(${CURSES_INCLUDE_DIR})
+endif()
+
+find_package(Threads REQUIRED)
+
+find_package(Boost REQUIRED)
+if (Boost_FOUND)
+    include_directories(${BOOST_INCLUDE_DIR})
+endif()
+
+#find_package(Curl REQUIRED) ugh this doesn't work
+
+#################
+#### Build Config
 
 set(CMAKE_CXX_STANDARD 14)
 
-find_package(Curses REQUIRED)
-IF (Curses_FOUND)
-include_directories(${CURSES_INCLUDE_DIR})
-endif()
+add_executable(
+    ${target_name}
 
-# enable when start using boost
-#find_package(Boost REQUIRED)
-#IF (Boost_FOUND)
-#include_directories(${BOOST_INCLUDE_DIR})
-#endif()
-
-set(sources
-
-	src/main.cpp
-	src/oauth.cpp
-	src/account.cpp
-	src/display.cpp
+    ${headers}
+    ${sources}
 )
 
-add_executable (${target_name} ${sources})
-target_link_libraries(${target_name} ${CURSES_LIBRARIES} ${BOOST_LIBRARIES}) 
+target_link_libraries(
+    ${target_name}
 
+    ${CMAKE_THREAD_LIBS_INIT}
+    ${CURSES_LIBRARIES}
+    ${BOOST_LIBRARIES}
+)
