json parsing working and ooops i committed a oauth token but good thing they auto expire and i have 2fa. :( COME ON, TEGAN pull it together i'm disappointed in you.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,7 +55,7 @@ set(
 #### Required Libraries
 
 # rapidjson located locally.
-include_directories("${CMAKE_SOURCE_DIR}/src/rapidjson")
+include_directories("${CMAKE_SOURCE_DIR}/external_libraries")
 
 find_package(Curses REQUIRED)
 if (Curses_FOUND)
